# agent-browser

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: color.rs  commands.rs  connection.rs  flags.rs  install.rs  main.rs  output.rs
docker/: Dockerfile.build  docker-compose.yml
docs/: package.json  pnpm-lock.yaml
docs/src/app/: globals.css  layout.tsx  page.tsx
docs/src/app/agent-mode/: page.tsx
docs/src/app/cdp-mode/: page.tsx
docs/src/app/commands/: page.tsx
docs/src/app/installation/: page.tsx
docs/src/app/quick-start/: page.tsx
docs/src/app/selectors/: page.tsx
docs/src/app/sessions/: page.tsx
docs/src/app/snapshots/: page.tsx
docs/src/app/streaming/: page.tsx
docs/src/components/: code-block.tsx  copy-button.tsx  sidebar.tsx
scripts/: build-all-platforms.sh  copy-native.js  postinstall.js  sync-version.js
skills/agent-browser/: SKILL.md
src/: actions.test.ts  actions.ts  browser.test.ts  browser.ts  daemon.ts  playwright-mcp.ts  protocol.test.ts  protocol.ts  snapshot.ts  stream-server.ts  types.ts
test/: serverless.test.ts
