[package]
name = "z-agent-browser"
version = "0.5.5"
edition = "2021"
description = "Enhanced browser automation CLI for AI agents - stealth, persistence, profiles"
license = "Apache-2.0"
repository = "https://github.com/zm2231/agent-browser"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
